[project]
name = "gcp-docs-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "html-to-markdown>=2.28.6",
    "llama-index>=0.14.18",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.0",
    "markdownify>=1.2.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]
